--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Mi Flipbook</title>
-
-  <!-- Estilos -->
+  <title>Flipbook de imágenes</title>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/turn.js@4/turn.min.js"></script>
   <style>
     body {
-      background: #ddd;
-      font-family: sans-serif;
+      background: #f0f0f0;
       display: flex;
       justify-content: center;
       padding: 40px;
@@ -17,58 +16,32 @@
       width: 800px;
       height: 600px;
     }
-    .page {
+    #flipbook .page {
       width: 400px;
       height: 600px;
-      background: white;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+    }
+    #flipbook img {
+      width: 100%;
+      height: 100%;
+      display: block;
     }
   </style>
-
-  <!-- Librerías necesarias -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/turn.js/4.1.0/turn.min.js"></script>
 </head>
 <body>
 
-<div id="flipbook"></div>
+<div id="flipbook">
+  <div class="page"><img src="pages/pagina1.jpg" alt="Página 1"></div>
+  <div class="page"><img src="pages/pagina2.jpg" alt="Página 2"></div>
+  <div class="page"><img src="pages/pagina3.jpg" alt="Página 3"></div>
+  <div class="page"><img src="pages/pagina4.jpg" alt="Página 4"></div>
+  <!-- Agrega más según tus imágenes -->
+</div>
 
 <script>
-  const url = 'Catalogo.pdf'; // Nombre del PDF que subiste
-
-  const flipbook = document.getElementById('flipbook');
-
-  pdfjsLib.getDocument(url).promise.then(function(pdf) {
-    const totalPages = pdf.numPages;
-
-    for (let i = 1; i <= totalPages; i++) {
-      const pageDiv = document.createElement('div');
-      pageDiv.className = 'page';
-      flipbook.appendChild(pageDiv);
-
-      pdf.getPage(i).then(function(page) {
-        const canvas = document.createElement('canvas');
-        const context = canvas.getContext('2d');
-        const viewport = page.getViewport({ scale: 1.5 });
-
-        canvas.width = viewport.width;
-        canvas.height = viewport.height;
-
-        page.render({ canvasContext: context, viewport: viewport }).promise.then(function() {
-          pageDiv.appendChild(canvas);
-        });
-      });
-    }
-
-    // Espera a que se generen los elementos antes de activar el flipbook
-    setTimeout(() => {
-      $('#flipbook').turn({
-        width: 800,
-        height: 600,
-        autoCenter: true
-      });
-    }, 1500);
+  $("#flipbook").turn({
+    width: 800,
+    height: 600,
+    autoCenter: true
   });
 </script>
 
