--- a/index.html
+++ b/index.html
@@ -2,29 +2,25 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Flipbook de Imágenes</title>
-
-  <!-- Librerías -->
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/turn.js@4/turn.min.js"></script>
-
-  <!-- Estilos -->
+  <title>Flipbook con Animación</title>
   <style>
     body {
-      background: #ccc;
+      margin: 0;
+      background: #444;
       display: flex;
       justify-content: center;
-      padding: 50px;
+      align-items: center;
+      height: 100vh;
     }
     #flipbook {
       width: 800px;
       height: 600px;
     }
-    .page {
+    #flipbook .page {
       width: 400px;
       height: 600px;
     }
-    .page img {
+    #flipbook .page img {
       width: 100%;
       height: 100%;
       display: block;
@@ -40,15 +36,19 @@
   <div class="page"><img src="pages/pagina4.jpg" alt="Página 4"></div>
 </div>
 
+<!-- Librerías -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="js/turn.min.js"></script>
+
 <script>
-  $(document).ready(function() {
-    $('#flipbook').turn({
+  $(document).ready(function(){
+    $("#flipbook").turn({
       width: 800,
       height: 600,
       autoCenter: true,
       elevation: 50,
       gradients: true,
-      duration: 600
+      duration: 1000
     });
   });
 </script>
