--- a/index.html
+++ b/index.html
@@ -2,41 +2,68 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Flipbook con Animación</title>
+  <title>Flipbook funcional</title>
+
   <style>
     body {
       margin: 0;
-      background: #444;
+      background: #222;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
     }
+
     #flipbook {
       width: 800px;
       height: 600px;
     }
-    #flipbook .page {
+
+    .page {
       width: 400px;
       height: 600px;
+      background: white;
+      overflow: hidden;
     }
-    #flipbook .page img {
+
+    .page img {
       width: 100%;
       height: 100%;
       display: block;
     }
+
+    /* Botones */
+    .nav-btn {
+      position: fixed;
+      top: 50%;
+      transform: translateY(-50%);
+      background: rgba(255,255,255,0.7);
+      border: none;
+      padding: 10px 20px;
+      cursor: pointer;
+      font-size: 20px;
+      z-index: 10;
+    }
+
+    #prev-btn { left: 10px; }
+    #next-btn { right: 10px; }
   </style>
 </head>
 <body>
 
+<!-- Contenedor del flipbook -->
 <div id="flipbook">
-  <div class="page"><img src="pages/pagina1.jpg" alt="Página 1"></div>
-  <div class="page"><img src="pages/pagina2.jpg" alt="Página 2"></div>
-  <div class="page"><img src="pages/pagina3.jpg" alt="Página 3"></div>
-  <div class="page"><img src="pages/pagina4.jpg" alt="Página 4"></div>
+  <div class="page"><img src="pages/pagina1.jpg" alt="1"></div>
+  <div class="page"><img src="pages/pagina2.jpg" alt="2"></div>
+  <div class="page"><img src="pages/pagina3.jpg" alt="3"></div>
+  <div class="page"><img src="pages/pagina4.jpg" alt="4"></div>
 </div>
 
-<!-- Librerías -->
+<!-- Botones de navegación -->
+<button class="nav-btn" id="prev-btn">&#8592;</button>
+<button class="nav-btn" id="next-btn">&#8594;</button>
+
+<!-- Scripts -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="js/turn.min.js"></script>
 
@@ -46,9 +73,16 @@
       width: 800,
       height: 600,
       autoCenter: true,
-      elevation: 50,
       gradients: true,
-      duration: 1000
+      elevation: 50
+    });
+
+    $("#prev-btn").click(function(){
+      $("#flipbook").turn("previous");
+    });
+
+    $("#next-btn").click(function(){
+      $("#flipbook").turn("next");
     });
   });
 </script>
