--- a/index.html
+++ b/index.html
@@ -2,66 +2,116 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Flipbook funcional</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Flipbook Interactivo</title>
 
+  <!-- Estilos -->
   <style>
     body {
       margin: 0;
-      background: #222;
+      background: url('https://www.transparenttextures.com/patterns/book-cover.png'), #282c34;
+      background-size: cover;
+      background-repeat: repeat;
+      font-family: sans-serif;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
-      height: 100vh;
+      justify-content: center;
+      min-height: 100vh;
     }
 
     #flipbook {
-      width: 800px;
-      height: 600px;
+      width: 90vw;
+      max-width: 800px;
+      height: 60vh;
     }
 
     .page {
-      width: 400px;
-      height: 600px;
+      width: 100%;
+      height: 100%;
       background: white;
       overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     .page img {
       width: 100%;
       height: 100%;
+      object-fit: contain;
       display: block;
     }
 
-    /* Botones */
     .nav-btn {
       position: fixed;
       top: 50%;
       transform: translateY(-50%);
-      background: rgba(255,255,255,0.7);
+      background: rgba(255,255,255,0.85);
       border: none;
       padding: 10px 20px;
       cursor: pointer;
-      font-size: 20px;
+      font-size: 24px;
       z-index: 10;
+      border-radius: 5px;
     }
 
     #prev-btn { left: 10px; }
     #next-btn { right: 10px; }
+
+    #controls {
+      position: fixed;
+      bottom: 20px;
+      display: flex;
+      gap: 10px;
+      z-index: 10;
+    }
+
+    #controls button {
+      padding: 8px 16px;
+      border: none;
+      border-radius: 4px;
+      background: #ffffffcc;
+      cursor: pointer;
+      font-size: 14px;
+    }
+
+    @media (max-width: 600px) {
+      #flipbook {
+        height: 70vh;
+      }
+      .nav-btn {
+        font-size: 18px;
+        padding: 6px 14px;
+      }
+      #controls button {
+        font-size: 12px;
+        padding: 6px 12px;
+      }
+    }
   </style>
 </head>
 <body>
 
-<!-- Contenedor del flipbook -->
+<!-- Flipbook -->
 <div id="flipbook">
-  <div class="page"><img src="pages/pagina1.jpg" alt="1"></div>
-  <div class="page"><img src="pages/pagina2.jpg" alt="2"></div>
-  <div class="page"><img src="pages/pagina3.jpg" alt="3"></div>
-  <div class="page"><img src="pages/pagina4.jpg" alt="4"></div>
+  <div class="page"><img src="pages/pagina1.jpg" alt="Página 1"></div>
+  <div class="page"><img src="pages/pagina2.jpg" alt="Página 2"></div>
+  <div class="page"><img src="pages/pagina3.jpg" alt="Página 3"></div>
+  <div class="page"><img src="pages/pagina4.jpg" alt="Página 4"></div>
 </div>
 
 <!-- Botones de navegación -->
 <button class="nav-btn" id="prev-btn">&#8592;</button>
 <button class="nav-btn" id="next-btn">&#8594;</button>
+
+<!-- Controles adicionales -->
+<div id="controls">
+  <button onclick="cambiarFondo()">Cambiar fondo</button>
+  <a href="catalogo.pdf" download>
+    <button>Descargar PDF</button>
+  </a>
+</div>
 
 <!-- Scripts -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -69,22 +119,36 @@
 
 <script>
   $(document).ready(function(){
-    $("#flipbook").turn({
-      width: 800,
-      height: 600,
+    $('#flipbook').turn({
+      width: $('#flipbook').width(),
+      height: $('#flipbook').height(),
       autoCenter: true,
-      gradients: true,
-      elevation: 50
+      elevation: 50,
+      gradients: true
     });
 
-    $("#prev-btn").click(function(){
-      $("#flipbook").turn("previous");
+    $('#prev-btn').click(function() {
+      $('#flipbook').turn('previous');
     });
 
-    $("#next-btn").click(function(){
-      $("#flipbook").turn("next");
+    $('#next-btn').click(function() {
+      $('#flipbook').turn('next');
+    });
+
+    // Ajustar tamaño al redimensionar ventana
+    $(window).on('resize', function() {
+      $('#flipbook').turn('size', $('#flipbook').width(), $('#flipbook').height());
     });
   });
+
+  // Cambiar fondo entre color e imagen
+  let fondoAlternativo = false;
+  function cambiarFondo() {
+    fondoAlternativo = !fondoAlternativo;
+    document.body.style.background = fondoAlternativo
+      ? "#1e1e1e"
+      : "url('https://www.transparenttextures.com/patterns/book-cover.png'), #282c34";
+  }
 </script>
 
 </body>
