--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Flipbook Interactivo</title>
+  <title>Flipbook Personalizado</title>
 
-  <!-- Estilos -->
+  <!-- ESTILOS PERSONALIZABLES -->
   <style>
     body {
       margin: 0;
-      background: url('https://www.transparenttextures.com/patterns/book-cover.png'), #282c34;
-      background-size: cover;
-      background-repeat: repeat;
       font-family: sans-serif;
+      background: #111; /* 👈 Cambia aquí el fondo del sitio (color o imagen) */
+      /* ejemplo con imagen: 
+      background: url('fondo.jpg') no-repeat center center;
+      background-size: cover;
+      */
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -29,7 +31,8 @@
     .page {
       width: 100%;
       height: 100%;
-      background: white;
+      /* 👇 Elimina fondo blanco */
+      background: transparent;
       overflow: hidden;
       display: flex;
       justify-content: center;
@@ -43,57 +46,60 @@
       display: block;
     }
 
-    .nav-btn {
-      position: fixed;
-      top: 50%;
-      transform: translateY(-50%);
-      background: rgba(255,255,255,0.85);
-      border: none;
-      padding: 10px 20px;
-      cursor: pointer;
-      font-size: 24px;
-      z-index: 10;
-      border-radius: 5px;
-    }
-
-    #prev-btn { left: 10px; }
-    #next-btn { right: 10px; }
-
-    #controls {
-      position: fixed;
-      bottom: 20px;
+    /* BOTONES DE NAVEGACIÓN */
+    #nav-buttons {
+      margin-top: 20px;
       display: flex;
-      gap: 10px;
-      z-index: 10;
+      gap: 20px;
+      justify-content: center;
+      align-items: center;
     }
 
-    #controls button {
-      padding: 8px 16px;
+    .nav-btn {
+      background: #ffffffcc; /* 👈 Personaliza color de botones */
       border: none;
-      border-radius: 4px;
-      background: #ffffffcc;
+      padding: 10px 25px;
+      border-radius: 5px;
+      font-size: 20px;
       cursor: pointer;
+      transition: all 0.3s;
+    }
+
+    .nav-btn:hover {
+      background: #fff;
+      box-shadow: 0 0 10px #00000044;
+    }
+
+    /* BOTÓN DE DESCARGA */
+    #controls {
+      margin-top: 10px;
+    }
+
+    #controls a button {
+      background: #4caf50;
+      color: white;
+      border: none;
+      padding: 8px 16px;
+      border-radius: 4px;
       font-size: 14px;
+      cursor: pointer;
     }
 
     @media (max-width: 600px) {
       #flipbook {
         height: 70vh;
       }
+
       .nav-btn {
+        padding: 8px 18px;
         font-size: 18px;
-        padding: 6px 14px;
-      }
-      #controls button {
-        font-size: 12px;
-        padding: 6px 12px;
       }
     }
   </style>
 </head>
 <body>
 
-<!-- Flipbook -->
+<!-- FLIPBOOK -->
 <div id="flipbook">
   <div class="page"><img src="pages/pagina1.jpg" alt="Página 1"></div>
   <div class="page"><img src="pages/pagina2.jpg" alt="Página 2"></div>
@@ -101,19 +107,20 @@
   <div class="page"><img src="pages/pagina4.jpg" alt="Página 4"></div>
 </div>
 
-<!-- Botones de navegación -->
-<button class="nav-btn" id="prev-btn">&#8592;</button>
-<button class="nav-btn" id="next-btn">&#8594;</button>
+<!-- BOTONES DE FLECHAS -->
+<div id="nav-buttons">
+  <button class="nav-btn" id="prev-btn">&#8592; Anterior</button>
+  <button class="nav-btn" id="next-btn">Siguiente &#8594;</button>
+</div>
 
-<!-- Controles adicionales -->
+<!-- BOTÓN DE DESCARGA -->
 <div id="controls">
-  <button onclick="cambiarFondo()">Cambiar fondo</button>
   <a href="catalogo.pdf" download>
     <button>Descargar PDF</button>
   </a>
 </div>
 
-<!-- Scripts -->
+<!-- SCRIPTS -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="js/turn.min.js"></script>
 
@@ -127,28 +134,18 @@
       gradients: true
     });
 
-    $('#prev-btn').click(function() {
+    $('#prev-btn').click(function(){
       $('#flipbook').turn('previous');
     });
 
-    $('#next-btn').click(function() {
+    $('#next-btn').click(function(){
       $('#flipbook').turn('next');
     });
 
-    // Ajustar tamaño al redimensionar ventana
-    $(window).on('resize', function() {
+    $(window).on('resize', function(){
       $('#flipbook').turn('size', $('#flipbook').width(), $('#flipbook').height());
     });
   });
-
-  // Cambiar fondo entre color e imagen
-  let fondoAlternativo = false;
-  function cambiarFondo() {
-    fondoAlternativo = !fondoAlternativo;
-    document.body.style.background = fondoAlternativo
-      ? "#1e1e1e"
-      : "url('https://www.transparenttextures.com/patterns/book-cover.png'), #282c34";
-  }
 </script>
 
 </body>
