--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
       width: 90vw;
       max-width: 800px;
       height: 60vh;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      box-shadow: 0 0 20px rgba(0,0,0,0.3); /* opcional, solo estético */
     }
 
     .page {
