--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
     .page {
       width: 100%;
       height: 100%;
-      /* 👇 Elimina fondo blanco */
       background: transparent;
       overflow: hidden;
       display: flex;
       justify-content: center;
       align-items: center;
+      margin: 0 !important;
+      padding: 0 !important;
+      border: none !important;
     }
 
     .page img {
@@ -48,7 +50,11 @@
       height: 100%;
       object-fit: contain;
       display: block;
+      margin: 0;
+      padding: 0;
+      border: none;
     }
+
 
     /* BOTONES DE NAVEGACIÓN */
     #nav-buttons {
