--- a/index.html
+++ b/index.html
@@ -2,39 +2,39 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Flipbook sin separación</title>
+  <title>Catálogo Flipbook</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
     body {
       margin: 0;
       padding: 0;
-      background: #1e1e1e; /* Cambia este valor para personalizar el fondo */
+      background: #1e1e1e; /* ← Personaliza el fondo aquí */
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       min-height: 100vh;
-      overflow-x: hidden;
     }
 
     #flipbook {
       width: 90vw;
       max-width: 800px;
       height: 60vh;
-      margin: 0 auto;
+      margin: auto;
       position: relative;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
     }
 
     .page {
-      width: 100%;
-      height: 100%;
-      background: transparent;
-      overflow: hidden;
+      background: transparent !important;
       margin: 0 !important;
       padding: 0 !important;
+      overflow: hidden;
       border: none !important;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     .page img {
@@ -51,17 +51,18 @@
       margin-top: 20px;
       display: flex;
       justify-content: center;
-      gap: 20px;
+      gap: 16px;
+      flex-wrap: wrap;
     }
 
     .nav-btn, .download-btn {
-      background: #ffffffcc;
+      background: #ffffffdd;
       border: none;
-      padding: 10px 20px;
+      padding: 10px 18px;
       border-radius: 10px;
       cursor: pointer;
-      font-size: 18px;
-      transition: background 0.3s;
+      font-size: 16px;
+      transition: background 0.3s ease;
     }
 
     .nav-btn:hover, .download-btn:hover {
@@ -70,27 +71,25 @@
 
     @media (max-width: 768px) {
       #flipbook {
-        height: 70vh;
+        height: 65vh;
       }
 
       .nav-btn, .download-btn {
-        font-size: 16px;
-        padding: 8px 16px;
+        font-size: 14px;
+        padding: 8px 14px;
       }
     }
   </style>
 </head>
 <body>
 
-<!-- Contenedor del flipbook -->
 <div id="flipbook">
-  <div class="page"><img src="pages/pagina1.jpg" alt="1"></div>
-  <div class="page"><img src="pages/pagina2.jpg" alt="2"></div>
-  <div class="page"><img src="pages/pagina3.jpg" alt="3"></div>
-  <div class="page"><img src="pages/pagina4.jpg" alt="4"></div>
+  <div class="page"><img src="pages/pagina1.jpg" alt="Página 1"></div>
+  <div class="page"><img src="pages/pagina2.jpg" alt="Página 2"></div>
+  <div class="page"><img src="pages/pagina3.jpg" alt="Página 3"></div>
+  <div class="page"><img src="pages/pagina4.jpg" alt="Página 4"></div>
 </div>
 
-<!-- Controles -->
 <div class="controls">
   <button class="nav-btn" id="prev-btn">⬅ Anterior</button>
   <button class="nav-btn" id="next-btn">Siguiente ➡</button>
@@ -109,11 +108,7 @@
       autoCenter: true,
       elevation: 50,
       gradients: true,
-      when: {
-        turning: function(event, page, view) {
-          // Puedes añadir efectos aquí si deseas
-        }
-      }
+      display: 'double',
     });
 
     $('#prev-btn').click(function () {
