--- a/index.html
+++ b/index.html
@@ -2,121 +2,87 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Catálogo Flipbook</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Flipbook funcional</title>
 
   <style>
     body {
       margin: 0;
-      padding: 0;
-      background: #1e1e1e; /* ← Personaliza el fondo aquí */
+      background: #222;
       display: flex;
-      flex-direction: column;
-      align-items: center;
       justify-content: center;
-      min-height: 100vh;
+      align-items: center;
+      height: 100vh;
     }
 
     #flipbook {
-      width: 90vw;
-      max-width: 800px;
-      height: 60vh;
-      margin: auto;
-      position: relative;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
+      width: 800px;
+      height: 600px;
     }
 
     .page {
-      background: transparent !important;
-      margin: 0 !important;
-      padding: 0 !important;
+      width: 400px;
+      height: 600px;
+      background: white;
       overflow: hidden;
-      border: none !important;
-      display: flex;
-      align-items: center;
-      justify-content: center;
     }
 
     .page img {
       width: 100%;
       height: 100%;
-      object-fit: contain;
       display: block;
-      margin: 0;
-      padding: 0;
-      border: none;
     }
 
-    .controls {
-      margin-top: 20px;
-      display: flex;
-      justify-content: center;
-      gap: 16px;
-      flex-wrap: wrap;
-    }
-
-    .nav-btn, .download-btn {
-      background: #ffffffdd;
+    /* Botones */
+    .nav-btn {
+      position: fixed;
+      top: 50%;
+      transform: translateY(-50%);
+      background: rgba(255,255,255,0.7);
       border: none;
-      padding: 10px 18px;
-      border-radius: 10px;
+      padding: 10px 20px;
       cursor: pointer;
-      font-size: 16px;
-      transition: background 0.3s ease;
+      font-size: 20px;
+      z-index: 10;
     }
 
-    .nav-btn:hover, .download-btn:hover {
-      background: #ffffff;
-    }
-
-    @media (max-width: 768px) {
-      #flipbook {
-        height: 65vh;
-      }
-
-      .nav-btn, .download-btn {
-        font-size: 14px;
-        padding: 8px 14px;
-      }
-    }
+    #prev-btn { left: 10px; }
+    #next-btn { right: 10px; }
   </style>
 </head>
 <body>
 
+<!-- Contenedor del flipbook -->
 <div id="flipbook">
-  <div class="page"><img src="pages/pagina1.jpg" alt="Página 1"></div>
-  <div class="page"><img src="pages/pagina2.jpg" alt="Página 2"></div>
-  <div class="page"><img src="pages/pagina3.jpg" alt="Página 3"></div>
-  <div class="page"><img src="pages/pagina4.jpg" alt="Página 4"></div>
+  <div class="page"><img src="pages/pagina1.jpg" alt="1"></div>
+  <div class="page"><img src="pages/pagina2.jpg" alt="2"></div>
+  <div class="page"><img src="pages/pagina3.jpg" alt="3"></div>
+  <div class="page"><img src="pages/pagina4.jpg" alt="4"></div>
 </div>
 
-<div class="controls">
-  <button class="nav-btn" id="prev-btn">⬅ Anterior</button>
-  <button class="nav-btn" id="next-btn">Siguiente ➡</button>
-  <a href="catalogo.pdf" download class="download-btn">📥 Descargar PDF</a>
-</div>
+<!-- Botones de navegación -->
+<button class="nav-btn" id="prev-btn">&#8592;</button>
+<button class="nav-btn" id="next-btn">&#8594;</button>
 
 <!-- Scripts -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="js/turn.min.js"></script>
 
 <script>
-  $(document).ready(function () {
-    $('#flipbook').turn({
-      width: $('#flipbook').width(),
-      height: $('#flipbook').height(),
+  $(document).ready(function(){
+    $("#flipbook").turn({
+      width: 800,
+      height: 600,
       autoCenter: true,
-      elevation: 50,
       gradients: true,
-      display: 'double',
+      elevation: 50
     });
 
-    $('#prev-btn').click(function () {
-      $('#flipbook').turn('previous');
+    $("#prev-btn").click(function(){
+      $("#flipbook").turn("previous");
     });
 
-    $('#next-btn').click(function () {
-      $('#flipbook').turn('next');
+    $("#next-btn").click(function(){
+      $("#flipbook").turn("next");
     });
   });
 </script>
