--- a/index.html
+++ b/index.html
@@ -2,29 +2,34 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Flipbook funcional responsive</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Flipbook funcional</title>
 
   <style>
     body {
       margin: 0;
-      background: #222 url('fondo.jpg') no-repeat center center fixed;
-      background-size: cover;
+      background: #222;
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      min-height: 100vh;
+      padding: 20px;
+      box-sizing: border-box;
+    }
+
+    #flipbook-container {
+      position: relative;
+      max-width: 100%;
     }
 
     #flipbook {
-      width: 800px;
-      height: 600px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.5);
+      width: 100%;
+      max-width: 800px;
+      height: auto;
+      aspect-ratio: 4/3;
     }
 
     .page {
-      width: 400px;
-      height: 600px;
       background: white;
       overflow: hidden;
     }
@@ -33,6 +38,7 @@
       width: 100%;
       height: 100%;
       display: block;
+      object-fit: contain;
     }
 
     /* Botones de navegación */
@@ -46,57 +52,43 @@
       cursor: pointer;
       font-size: 20px;
       z-index: 10;
+      border-radius: 5px;
     }
 
     #prev-btn { left: 10px; }
     #next-btn { right: 10px; }
 
-    /* Botón para descargar catálogo */
-    .download-btn {
+    /* Botón de descarga */
+    #download-btn {
       position: fixed;
       bottom: 20px;
-      background: rgba(255,255,255,0.8);
+      right: 20px;
+      background: #4CAF50;
+      color: white;
       border: none;
-      padding: 10px 16px;
-      font-size: 16px;
-      border-radius: 8px;
+      padding: 10px 20px;
       cursor: pointer;
-      text-decoration: none;
-      color: #000;
+      font-size: 16px;
       z-index: 10;
+      border-radius: 5px;
+      display: flex;
+      align-items: center;
+      gap: 8px;
     }
 
-    .download-btn:hover {
-      background: white;
+    #download-btn:hover {
+      background: #45a049;
     }
 
-    /* Responsive para móviles */
     @media (max-width: 768px) {
-      #flipbook {
-        width: 90vw;
-        height: 70vh;
-      }
-
-      .page {
-        width: 50vw;
-        height: 70vh;
-      }
-
       .nav-btn {
-        padding: 8px 14px;
+        padding: 8px 15px;
         font-size: 16px;
       }
-
-      .download-btn {
-        font-size: 18px;
-        padding: 14px 20px;
-        bottom: 15px;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 80vw;
-        text-align: center;
-        box-sizing: border-box;
-        position: fixed;
+      
+      #download-btn {
+        padding: 8px 15px;
+        font-size: 14px;
       }
     }
   </style>
@@ -104,45 +96,63 @@
 <body>
 
 <!-- Contenedor del flipbook -->
-<div id="flipbook">
-  <div class="page"><img src="pages/pagina1.jpg" alt="1"></div>
-  <div class="page"><img src="pages/pagina2.jpg" alt="2"></div>
-  <div class="page"><img src="pages/pagina3.jpg" alt="3"></div>
-  <div class="page"><img src="pages/pagina4.jpg" alt="4"></div>
+<div id="flipbook-container">
+  <div id="flipbook">
+    <div class="page"><img src="pages/pagina1.jpg" alt="Página 1"></div>
+    <div class="page"><img src="pages/pagina2.jpg" alt="Página 2"></div>
+    <div class="page"><img src="pages/pagina3.jpg" alt="Página 3"></div>
+    <div class="page"><img src="pages/pagina4.jpg" alt="Página 4"></div>
+  </div>
 </div>
 
 <!-- Botones de navegación -->
 <button class="nav-btn" id="prev-btn">&#8592;</button>
 <button class="nav-btn" id="next-btn">&#8594;</button>
 
-<!-- Botón para descargar el catálogo PDF -->
-<a href="catalogo.pdf" download class="download-btn">📥 Descargar catálogo</a>
+<!-- Botón de descarga -->
+<a href="catalogo.pdf" download="catalogo.pdf" id="download-btn">
+  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+    <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+    <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+  </svg>
+  Descargar PDF
+</a>
 
 <!-- Scripts -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="js/turn.min.js"></script>
 
 <script>
+  // Configuración del flipbook
   $(document).ready(function(){
-    $("#flipbook").turn({
-      width: $("#flipbook").width(),
-      height: $("#flipbook").height(),
-      autoCenter: true,
-      gradients: true,
-      elevation: 50
+    function initFlipbook() {
+      const containerWidth = $('#flipbook-container').width();
+      const calculatedWidth = Math.min(containerWidth, 800);
+      const calculatedHeight = calculatedWidth * 0.75; // Relación 4:3
+      
+      $("#flipbook").turn({
+        width: calculatedWidth,
+        height: calculatedHeight,
+        autoCenter: true,
+        gradients: true,
+        elevation: 30
+      });
+    }
+
+    // Inicializar y redimensionar
+    initFlipbook();
+    $(window).resize(function(){
+      $("#flipbook").turn("destroy");
+      initFlipbook();
     });
 
+    // Navegación
     $("#prev-btn").click(function(){
       $("#flipbook").turn("previous");
     });
 
     $("#next-btn").click(function(){
       $("#flipbook").turn("next");
-    });
-
-    // Ajustar tamaño del flipbook al cambiar tamaño de ventana (opcional)
-    $(window).on('resize', function(){
-      $("#flipbook").turn("size", $("#flipbook").width(), $("#flipbook").height());
     });
   });
 </script>
