--- a/index.html
+++ b/index.html
@@ -9,15 +9,11 @@
   <style>
     body {
       margin: 0;
-      background: url('https://www.transparenttextures.com/patterns/book-cover.png'), #282c34;
-      background-size: cover;
-      background-repeat: repeat;
-      font-family: sans-serif;
+      background: #222;
       display: flex;
-      flex-direction: column;
-      align-items: center;
       justify-content: center;
-      min-height: 100vh;
+      align-items: center;
+      height: 100vh;
     }
 
     #flipbook {
