--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Flipbook Personalizado</title>
+  <title>Flipbook Interactivo</title>
 
-  <!-- ESTILOS PERSONALIZABLES -->
+  <!-- Estilos -->
   <style>
     body {
       margin: 0;
@@ -29,8 +29,7 @@
     .page {
       width: 100%;
       height: 100%;
-      /* 👇 Elimina fondo blanco */
-      background: transparent;
+      background: white;
       overflow: hidden;
       display: flex;
       justify-content: center;
@@ -44,60 +43,57 @@
       display: block;
     }
 
-    /* BOTONES DE NAVEGACIÓN */
-    #nav-buttons {
-      margin-top: 20px;
-      display: flex;
-      gap: 20px;
-      justify-content: center;
-      align-items: center;
-    }
-
     .nav-btn {
-      background: #ffffffcc; /* 👈 Personaliza color de botones */
+      position: fixed;
+      top: 50%;
+      transform: translateY(-50%);
+      background: rgba(255,255,255,0.85);
       border: none;
-      padding: 10px 25px;
+      padding: 10px 20px;
+      cursor: pointer;
+      font-size: 24px;
+      z-index: 10;
       border-radius: 5px;
-      font-size: 20px;
-      cursor: pointer;
-      transition: all 0.3s;
     }
 
-    .nav-btn:hover {
-      background: #fff;
-      box-shadow: 0 0 10px #00000044;
-    }
+    #prev-btn { left: 10px; }
+    #next-btn { right: 10px; }
 
-    /* BOTÓN DE DESCARGA */
     #controls {
-      margin-top: 10px;
+      position: fixed;
+      bottom: 20px;
+      display: flex;
+      gap: 10px;
+      z-index: 10;
     }
 
-    #controls a button {
-      background: #4caf50;
-      color: white;
-      border: none;
+    #controls button {
       padding: 8px 16px;
+      border: none;
       border-radius: 4px;
-      font-size: 14px;
+      background: #ffffffcc;
       cursor: pointer;
+      font-size: 14px;
     }
 
     @media (max-width: 600px) {
       #flipbook {
         height: 70vh;
       }
-
       .nav-btn {
-        padding: 8px 18px;
         font-size: 18px;
+        padding: 6px 14px;
+      }
+      #controls button {
+        font-size: 12px;
+        padding: 6px 12px;
       }
     }
   </style>
 </head>
 <body>
 
-<!-- FLIPBOOK -->
+<!-- Flipbook -->
 <div id="flipbook">
   <div class="page"><img src="pages/pagina1.jpg" alt="Página 1"></div>
   <div class="page"><img src="pages/pagina2.jpg" alt="Página 2"></div>
@@ -105,20 +101,19 @@
   <div class="page"><img src="pages/pagina4.jpg" alt="Página 4"></div>
 </div>
 
-<!-- BOTONES DE FLECHAS -->
-<div id="nav-buttons">
-  <button class="nav-btn" id="prev-btn">&#8592; Anterior</button>
-  <button class="nav-btn" id="next-btn">Siguiente &#8594;</button>
-</div>
+<!-- Botones de navegación -->
+<button class="nav-btn" id="prev-btn">&#8592;</button>
+<button class="nav-btn" id="next-btn">&#8594;</button>
 
-<!-- BOTÓN DE DESCARGA -->
+<!-- Controles adicionales -->
 <div id="controls">
+  <button onclick="cambiarFondo()">Cambiar fondo</button>
   <a href="catalogo.pdf" download>
     <button>Descargar PDF</button>
   </a>
 </div>
 
-<!-- SCRIPTS -->
+<!-- Scripts -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="js/turn.min.js"></script>
 
