--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
   <style>
     body {
       margin: 0;
-      background: url('https://www.transparenttextures.com/patterns/book-cover.png'), #282c34;
-      background-size: cover;
-      background-repeat: repeat;
       font-family: sans-serif;
+      background: #111; /* 👈 Cambia aquí el fondo del sitio (color o imagen) */
+      /* ejemplo con imagen: 
+      background: url('fondo.jpg') no-repeat center center;
+      background-size: cover;
+      */
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -29,7 +31,8 @@
     .page {
       width: 100%;
       height: 100%;
-      background: white;
+      /* 👇 Elimina fondo blanco */
+      background: transparent;
       overflow: hidden;
       display: flex;
       justify-content: center;
