--- a/index.html
+++ b/index.html
@@ -29,14 +29,10 @@
     }
 
     .page {
-      width: 100%;
-      height: 100%;
-      /* 👇 Elimina fondo blanco */
-      background: transparent;
+      width: 400px;
+      height: 600px;
+      background: white;
       overflow: hidden;
-      display: flex;
-      justify-content: center;
-      align-items: center;
     }
 
     .page img {
