--- a/index.html
+++ b/index.html
@@ -9,17 +9,11 @@
   <style>
     body {
       margin: 0;
-      font-family: sans-serif;
-      background: #111; /* 👈 Cambia aquí el fondo del sitio (color o imagen) */
-      /* ejemplo con imagen: 
-      background: url('fondo.jpg') no-repeat center center;
-      background-size: cover;
-      */
+      background: #222;
       display: flex;
-      flex-direction: column;
-      align-items: center;
       justify-content: center;
-      min-height: 100vh;
+      align-items: center;
+      height: 100vh;
     }
 
     #flipbook {
