--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
 <!-- BOTÓN DE DESCARGA -->
 <div id="controls">
-  <a href="catalogo.pdf" download>
+  <a href="catálogo.pdf" download>
     <button>Descargar PDF</button>
   </a>
 </div>
