--- a/index.html
+++ b/index.html
@@ -10,11 +10,8 @@
     body {
       margin: 0;
       font-family: sans-serif;
-      background: #111; /* 👈 Cambia aquí el fondo del sitio (color o imagen) */
-      /* ejemplo con imagen: 
-      background: url('fondo.jpg') no-repeat center center;
+      background: url('images/Fondo.jpg') no-repeat center center;
       background-size: cover;
-      */
       display: flex;
       flex-direction: column;
       align-items: center;
